syntax = "proto3";
package dydxprotocol.vault;

import "gogoproto/gogo.proto";
import "dydxprotocol/vault/params.proto";
import "dydxprotocol/vault/share.proto";
import "dydxprotocol/vault/vault.proto";

option go_package = "github.com/dydxprotocol/v4-chain/protocol/x/vault/types";

// GenesisState defines `x/vault`'s genesis state.
message GenesisState {
  // The total number of shares.
  NumShares total_shares = 1 [ (gogoproto.nullable) = false ];
  // The shares of each owner.
  repeated OwnerShare owner_shares = 2 [ (gogoproto.nullable) = false ];
  // The vaults.
  repeated Vault vaults = 3 [ (gogoproto.nullable) = false ];
  // The default quoting parameters for all vaults.
  QuotingParams default_quoting_params = 4 [ (gogoproto.nullable) = false ];
}

// Vault defines the state of a vault.
message Vault {
  // The ID of the vault.
  VaultId vault_id = 1 [ (gogoproto.nullable) = false ];
  // The parameters of the vault.
  VaultParams vault_params = 2 [ (gogoproto.nullable) = false ];
  // The client IDs of the most recently placed orders of the vault.
  repeated uint32 most_recent_client_ids = 3;
}
